df-derive/tests/fail/133-fail-skip-with-conversion-attr.stderr
error: field `value` combines `skip` with another field attribute; `skip` omits the field entirely, so conversion attributes have no effect; drop one
 --> tests/fail/133-fail-skip-with-conversion-attr.rs:7:23
  |
7 |     #[df_derive(skip, as_str)]
  |                       ^^^^^^

error: first `skip` override declared here
 --> tests/fail/133-fail-skip-with-conversion-attr.rs:7:17
  |
7 |     #[df_derive(skip, as_str)]
  |                 ^^^^
